--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: php
+dist: trusty
 
 php:
   - 5.5
@@ -25,6 +26,7 @@ before_script:
   - composer self-update
   - composer install --prefer-dist --no-interaction --dev
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE searchable_test;'; fi"
+  - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e \"GRANT ALL PRIVILEGES ON searchable_test.* TO 'travis'@'%';\"; fi"
   - command -v phpenv > /dev/null && phpenv rehash || true
   - sh -c "if [ '$COVERALLS' = '1' ]; then mkdir -p build/logs; fi"
 
