upgrade phpunit, drop php 5.5, run phpcs and coveralls on php 7.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: php
 dist: trusty
 
 php:
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
@@ -17,9 +16,9 @@ env:
 
 matrix:
   include:
-    - php: 5.5
+    - php: 7.1
       env: PHPCS=1 DEFAULT=0
-    - php: 5.5
+    - php: 7.1
       env: COVERALLS=1 DEFAULT=0 DB=mysql db_dsn='mysql://travis@127.0.0.1/searchable_test'
 
 before_script:
@@ -32,8 +31,8 @@ before_script:
 
 script:
   - sh -c "if [ '$PHPCS' = '1' ]; then vendor/bin/phpcs -n -p --extensions=php --standard=vendor/cakephp/cakephp-codesniffer/CakePHP --ignore=vendor --ignore=docs --ignore=tests/bootstrap.php . ; fi"
-  - sh -c "if [ '$DEFAULT' = '1' ]; then phpunit; fi"
-  - sh -c "if [ '$COVERALLS' = '1' ]; then phpunit --stderr --coverage-clover build/logs/clover.xml; fi"
+  - sh -c "if [ '$DEFAULT' = '1' ]; then vendor/bin/phpunit; fi"
+  - sh -c "if [ '$COVERALLS' = '1' ]; then vendor/bin/phpunit --stderr --coverage-clover build/logs/clover.xml; fi"
 
 after_script:
   - sh -c "if [ '$COVERALLS' = '1' ]; then php vendor/bin/coveralls -v; fi"
