--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         }
     ],
     "require": {
-        "cakephp/cakephp": "^3.5",
-        "php": ">=5.6"
+        "cakephp/cakephp": "4.*",
+        "php": ">=5.6",
+        "phpunit/phpunit": "8.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
         "cakephp/cakephp-codesniffer": "dev-master",
         "php-coveralls/php-coveralls": "^2.0.0"
     },
