--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     ],
     "require": {
         "cakephp/cakephp": "4.*",
-        "php": ">=5.6",
-        "phpunit/phpunit": "8.*"
+        "php": ">=5.6"
     },
     "require-dev": {
         "cakephp/cakephp-codesniffer": "dev-master",
-        "php-coveralls/php-coveralls": "^2.0.0"
+        "php-coveralls/php-coveralls": "^2.0.0",
+        "phpunit/phpunit": "8.*"
     },
     "autoload": {
         "psr-4": {
